# Themis

./: LICENSE  Makefile  README.md  pyproject.toml
api/: pyproject.toml
app/: main.py
app/config/: base.py
app/migrations/: 002_create_query_history_table.sql  003_create_webscraper_table.sql
app/models/: embedding.py  retriever.py  webscraper.py
app/routers/: embedding.py  embedding_api.py  item.py  retriever.py  webscraper.py
app/schemas/: embedding.py  item.py  retriever.py  webscraper.py
app/services/: embedding.py  item.py  retriever.py  webscraper.py
app/store/: sqlite_db.py
app/utils/: pdf_extractor.py  similarity.py  text_splitter.py  web_scraper.py
configs/: .env.local.example
scripts/embedding-document/: embedding1.py  embedding2.py  embedding3.py
